processed/jira/txt/LU/LU-16116.txt
Key:        LU-16116
Summary:    Linux 5.17+ Configure tests for rhltable, bitmap_alloc, rdma_wr, nla_strdup
Link:       https://jira.whamcloud.com/browse/LU-16116
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sun, 28 Aug 2022 14:43:49 +0000
Updated:    Sat, 20 May 2023 12:06:28 +0000
Resolved:   Sat, 20 May 2023 12:06:28 +0000

--- Description ---
rhel8.6 with kernel 5.18 breaks a couple of compile tests

    struct rhltable test fails with:

    ... error: ‘hlt’ is used uninitialized in this function

        [-Werror=uninitialized]

    bitmap_alloc() test fails with:

    ... error: unused variable ‘map’ [-Werror=unused-variable]

    rdma_wr() test failes with:

    ... error: assignment discards ‘const’ qualifier from pointer

        target type [-Werror=discarded-qualifiers]

       wr = rdma_wr(NULL);

    nla_strdup() test fails due to unused variable 'tmp'

Linux commit v5.15-12273-gab2f9d2d3626

   mm: unexport 

{,un}
lock_page_memcg

Fails when lock_page_memcg exists but is not exported.

In file included from /home/shaun/lustre-release/lustre/include/lvfs.h:44,
                 from /home/shaun/lustre-release/lustre/include/obd.h:55,
                 from /home/shaun/lustre-release/lustre/llite/vvp_io.c:39:
/home/shaun/lustre-release/lustre/include/lustre_compat.h:468:31: error: expected identifier or ‘(’ before ‘do’
 #define lock_page_memcg(page) do {} while (0)
                               ^~
include/linux/memcontrol.h:946:6: note: in expansion of macro ‘lock_page_memcg’
 void lock_page_memcg(struct page *page);
      ^~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/include/lustre_compat.h:468:37: error: expected identifier or ‘(’ before ‘while’
 #define lock_page_memcg(page) do {} while (0)
                                     ^~~~~
include/linux/memcontrol.h:946:6: note: in expansion of macro ‘lock_page_memcg’
 void lock_page_memcg(struct page *page);
      ^~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/include/lustre_compat.h:469:33: error: expected identifier or ‘(’ before ‘do’
 #define unlock_page_memcg(page) do {} while (0)
                                 ^~
include/linux/memcontrol.h:947:6: note: in expansion of macro ‘unlock_page_memcg’
 void unlock_page_memcg(struct page *page);
      ^~~~~~~~~~~~~~~~~
/home/shaun/lustre-release/lustre/include/lustre_compat.h:469:39: error: expected identifier or ‘(’ before ‘while’
 #define unlock_page_memcg(page) do {} while (0)
                                       ^~~~~
include/linux/memcontrol.h:947:6: note: in expansion of macro ‘unlock_page_memcg’
 void unlock_page_memcg(struct page *page);
      ^~~~~~~~~~~~~~~~~

Adjust usage of [un]lock_page_memcg() to vvp_[un]lock_page_memcg() and 

define the mapping accordingly to avoid the compile error.

--- Comment (gerrit, Wed, 8 Mar 2023 06:46:03 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/49116/

Subject: LU-16116 build: Configure tests for rhltable, bitmap_alloc...

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 

Commit: 130d7a0e246ab1776efff55fe11c096da1c69ec8

--- Comment (gerrit, Sat, 7 Jan 2023 07:54:13 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/48361/

Subject: LU-16116 build: Configure tests for rhltable, bitmap_alloc...

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 009faf132dc47dcfb604b95c93211da7d2c644e2

--- Comment (gerrit, Sun, 13 Nov 2022 06:16:08 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/49144

Subject: LU-16116 build: Fix configure tests for lock_page_memcg

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 5f11d74ff58a3a89498e40bf66499d9e6bdae967

--- Comment (gerrit, Thu, 10 Nov 2022 21:05:27 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/49116

Subject: LU-16116 build: Configure tests for rhltable, bitmap_alloc...

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: 626fdd731d09a3f6357054454237acf39fc3d120

--- Comment (gerrit, Sun, 28 Aug 2022 14:48:24 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/48361

Subject: LU-16116 build: Configure tests for rhltable, bitmap_alloc...

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 2608d12851134d408da27e817696c1e9224f39eb
